--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   intl: ^0.20.2
   image_picker: ^1.1.2
   fl_chart: ^1.0.0
+  record: ^6.0.0
+  permission_handler: ^12.0.0+1
+  path_provider: ^2.1.5
+  audioplayers: ^6.5.0
+  path: ^1.8.3
+  file_picker: ^10.2.0
+  # file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
