--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   audioplayers: ^6.5.0
   path: ^1.8.3
   file_picker: ^10.2.0
+  open_file: ^3.5.10
   # file_picker: ^6.1.1
 
 dev_dependencies:
