--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
 
   assets: 
     - assets/google.png
+    - assets/imagenes/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
