--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
   assets: 
     - assets/google.png
     - assets/imagenes/logo.png
+    - assets/imagenes/logoJuli.png
+    - assets\imagenes\logo_word.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
